--- a/NewMarvel/ios/NewMarvel/Info.plist
+++ b/NewMarvel/ios/NewMarvel/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ChrustyRock-ORLA.ttf</string>
+		<string>dirtyoldtown.ttf</string>
+		<string>Montserrat-ExtraBold.ttf</string>
+		<string>Raleway-VariableFont_wght.ttf</string>
+		<string>Righteous-Regular.ttf</string>
+		<string>Ubuntu-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
