--- a/NewMarvel/package.json
+++ b/NewMarvel/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.68.2",
     "react-native-config": "^1.4.6",
     "react-native-fbsdk-next": "^9.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.2.0"
